[INC-2] make create item listing return empty items from domain layer.